# magic-character-box

./: .gitignore  AGENTS.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  requirements.txt
cad/: README.md  build_case.sh  magic-character-box-case.scad  nfc-character-base.scad
config/: characters.json  pin-reservations.json
docs/: 3d-printable-figures.md  assembly.md  audio-sources.md  birthday-mission-cards.md  birthday-weekend-build.md  enclosure-notes.md  hardware-profiles.md  known-limitations.md  marketing-linkedin.md  materials.md  open-source-notes.md  pi-deployment.md  pi-zero-2w-pin-map.md  printable-assets.md  quick-build.md  release-checklist.md  rf-programming.md  system-sounds.md  transactional-player-load.md  troubleshooting.md  tutorial-roadmap.md  web-admin.md  wiring.md
polkit/: 49-magic-character-box-networkmanager.rules
scripts/: create_guest_link.py  fake_tag.py  generate_system_sounds.sh  install_pi.sh  magic-character-box-wifi-control  prepare_audio.py  register_character.py  scan_tag.py
stl/: README.md  nfc-character-base-flat.stl  small-sidecar-enclosure-assembly.stl  small-sidecar-enclosure-body.stl  small-sidecar-enclosure-lid.stl
sudoers/: magic-character-box-wifi-control
systemd/: magic-character-box-admin-dev.service  magic-character-box-admin.service  magic-character-box-audio-keeper.service  magic-character-box-dev.service  magic-character-box.service
tests/: test_admin.py  test_app.py  test_audio.py  test_audio_prep.py  test_bluetooth.py  test_config.py  test_control.py  test_dock_sync.py  test_guest_links.py  (+12 more)
(+35 files in other folders)
